--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+golang-go.net-dev (0.0~hg20150515-1) unstable; urgency=low
+
+  * Imported Upstream version 0.0~hg20150515
+
+ -- Jonathan Dray <jonathan.dray@gmail.com>  Fri, 15 May 2015 16:14:15 +0200
+
 golang-go.net-dev (0.0~hg20131201-1) unstable; urgency=low
 
   [ Michael Stapelberg ]
